apps/locust/locust-slave.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locustslave
  namespace: loadtesting
  labels:
    app: locustslave
    tool: locust
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: locustslave
        tier: loadtesting 
    spec:
      containers:
      - image: pblaas/locust-test 
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "400m"  
            memory: "512Mi"
        name: locustslave
