apps/locust/locust-master.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: locustmaster
  namespace: loadtesting
  labels:
    app: locustmaster
    tool: locust
spec:
  ports:
    - name: ui
      port: 8089
      protocol: TCP
      targetPort: 8089
    - name: masterp1
      port: 5557
      protocol: TCP
      targetPort: 5557
    - name: masterp2
      port: 5558
      protocol: TCP
      targetPort: 5558
  selector:
    app: locustmaster
    tier: loadtesting
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: locustmaster-ingress
  namespace: loadtesting
  labels:
    tool: locust
spec:
  rules:
    - host: locust.k8s.yourdomain.ltd
      http:
        paths:
          - path: /
            backend:
              serviceName: locustmaster
              servicePort: 8089
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locustmaster
  namespace: loadtesting
  labels:
    app: locustmaster
    tool: locust
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: locustmaster
        tier: loadtesting
    spec:
      containers:
      - image: pblaas/locust-test
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"
        name: locustmaster
        volumeMounts:
          - name: locustfile-config
            mountPath: /test
        ports:
        - containerPort: 8089
          name: locustmaster
      volumes:
        - name: locustfile-config
          configMap:
            name: locustfile
